# trueblocks-rpc

./: .clang-format  .gitignore  LICENSE  LICENSE.txt  README.md  README_OLD.md  README_TJR.md
cmake/: FindJsoncpp.cmake
src/: CMakeLists.txt  Makefile  spec.json
src/apps/: CMakeLists.txt  rpc_client.cpp  rpc_server.cpp
src/client/: CMakeLists.txt  rpc_client.cpp  rpct_client.cpp
src/cmake/: FindArgtable.cmake  FindJsoncpp.cmake  libjson-rpc-cppConfig.cmake.in  libjsonrpccpp-client.pc.cmake  libjsonrpccpp-common.pc.cmake  libjsonrpccpp-server.pc.cmake  libjsonrpccpp-stub.pc.cmake
src/generator/: CMakeLists.txt  generate.cpp  generate.h  generate_client_cpp.cpp  generate_client_js.cpp  generate_client_py.cpp  generate_server_cpp.cpp  generator_ccpclient.cpp  generator_ccpserver.cpp  generator_jsclient.cpp  generator_pyclient.cpp  generators.h  main.cpp
src/jsonrpccpp/: CMakeLists.txt  rpclib.h
src/jsonrpccpp/client/: batchcall.cpp  batchcall.h  batchresponse.h  client.cpp  httpclient.cpp  httpclient.h  rpcprotocolclient.h
src/jsonrpccpp/common/: procedure.h  utils.h
src/jsonrpccpp/server/: abstractserver.h  httpserver.cpp  iprocedureinvokationhandler.h  rpcprotocolserverv2.cpp  rpcprotocolserverv2.h
src/rpclib/: CMakeLists.txt  batch_request.cpp  batch_request.h  batch_response.cpp  batch_response.h  batchcall.cpp  batchcall.h  batchresponse.cpp  batchresponse.h  client.cpp  client.h  client_handler.cpp  client_handler.h  clientprotocolhandler.cpp  clientprotocolhandler.h  errors.cpp  errors.h  exception.cpp  exception.h  http_client.cpp  http_client.h  http_server.cpp  http_server.h  httpclient.cpp  httpclient.h  httpserver.cpp  iprocedureinvokationhandler.h  procedure.cpp  procedure.h  rpclib.h  server.cpp  server.h  server_base.h  server_handler.cpp  server_handler.h  serverprotocolhandler.cpp  serverprotocolhandler.h  types.h  utils.h  version.h
src/rpct/: CMakeLists.txt  abstractserver.h  batchcall.cpp  batchcall.h  batchresponse.cpp  batchresponse.h  client.cpp  client.h  clientprotocolhandler.cpp  clientprotocolhandler.h  errors.cpp  errors.h  exception.cpp  exception.h  httpclient.cpp  httpclient.h  httpserver.cpp  httpserver.h  iprocedureinvokationhandler.h  procedure.cpp  procedure.h  rpclib.h  rpcprotocolclient.cpp  rpcprotocolclient.h  rpcprotocolserverv2.cpp  rpcprotocolserverv2.h  rpctlib.h  server.h  serverprotocolhandler.cpp  serverprotocolhandler.h  types.h
src/rpct/client/: batchcall.cpp  batchcall.h  batchresponse.cpp  batchresponse.h  client.h  httpclient.h  rpcprotocolclient.cpp  rpcprotocolclient.h
src/rpct/common/: procedure.h
src/rpct/libs/: procedure.h
src/rpct/server/: abstractserver.h  httpserver.cpp  httpserver.h  iprocedureinvokationhandler.h  rpcprotocolserverv2.cpp  rpcprotocolserverv2.h
src/server/: CMakeLists.txt  rpc_server.cpp  rpct_server.cpp
test/js/: index.html  jsclient.js
